--- a/BackendSistemaHospital/BackendSistemaHospital/appsettings.json
+++ b/BackendSistemaHospital/BackendSistemaHospital/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "SecretKey": "asdwda*ray#1d8a4sd8w4das8d*w8d*asd@#",
   "UrlConnection": "Server=LAPTOP-F9AEJK6I\\SQLEXPRESS;Database=SistemaHospital;Trusted_Connection=True;ConnectRetryCount=0",
   "Logging": {
     "LogLevel": {
